# HTMLReader

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  GetAttributes.cpp  GetTitle.cpp  Search.cpp  SearchByAttribute.cpp  SearchByTagName.cpp
include/: HTMLReader.h
tests/: CMakeLists.txt  GetTitle.cpp  main.cpp
tests/HTML/: a.html
